 Otherwise indicated differently, all changes made by 
 	Jelmer Vernooij.

Ctrlproxy 3.0.1 2007-01-04

  BUG FIXES

    * Logging for network state information has been simplified and been 
	  made less verbose.

	* 324 and 329 replies are now cached.

	* 352 and 315 replies are now (optionally) cached. The "max_who_age" 
	  setting can be set to the number of seconds that results should be cached.
	  This prevents "Excess Flood" errors when connecting using several xchat clients
	  at once. Can be disabled by setting max_who_age=0 (the default).

    * Fixed bug in administration command (reported by Daniel Poelzleithner)

    * Fix invalid assert in auto-away (reported by Daniel Poelzleithner)

	* Fix rejoining parted channels on restart (#78)

	* Fix erroneus toggling of "report-time" setting (#77)
	
	* Fix endless loop in logging system when debug level is 
	  set to 5 (reported by _static_).
	
	* listener configuration is no longer truncated at exit.

	* Fix channel information not being replicated for the administration 
	  network.

  PORTABILITY
  
    * Added replacement functions for g_file_{set,get}_contents, for those 
      with GLib < 2.8
    
  DOCUMENTATION UPDATES

    * Updated command documentation (thanks, Korbinian Rosenegger)

    * Updated requirements

  MINOR CHANGES

    * Fixed several compiler warnings

Ctrlproxy 3.0	2006-12-08

  This list is not complete. Several subsystems in ctrlproxy have been 
  rewritten.

  BUG FIXES

    * NetBSD portability fixes. (Adrian Portelli)

    * Properly support strict-rfc1459 comparisons.

	* No longer depend on specific order of USER and NICK commands.

	* Fixed 100% CPU usage bug.

	* Fix large number of memory leaks.

	* Fix crash bug in log_custom (Korbinian Rosenegger)

	* Support 'true' RFC1459 string comparison.

	* Respect CASEMAPPING sent by server.

	* Support different NICK sent by client in replication.

	* Make repl_* work when NICK sent by client differs from current NICK.
